# bridge-fungible-token

./: .gitignore  Forc.toml  README.md
.github/scripts/: fmt.sh  test.sh
.github/workflows/: ci.yml
FRC20-abi/: Forc.toml
L2ERC20Gateway_abi/: Forc.toml
L2ERC20Gateway_abi/src/: lib.sw  main.sw
L2ERC20Gateway_caller_script/: Cargo.toml  Forc.toml
L2ERC20Gateway_caller_script/src/: main.sw
L2ERC20Gateway_caller_script/tests/: harness.rs
POC/predicate/: Forc.toml
POC/script/: Cargo.toml  Forc.toml
POC/script/src/: main.sw
POC/script/tests/: harness.rs
POC/temp/: Cargo.toml  Forc.toml
POC/test_script/: Cargo.toml
bridge-abi/: Forc.toml
bridge-abi/src/: bridge_abi.sw
bridge-fungible-token/: Cargo.toml  Forc.toml
bridge-fungible-token-abi/src/: bridge_fungible_token_abi.sw  lib.sw
bridge-fungible-token/src/: bridge_fungible_token.sw  bridge_fungible_token_contract.sw.sw  data.sw  errors.sw  events.sw  main.sw  utils.sw
bridge-fungible-token/tests/: harness.rs
bridge-message-predicates/: contract_message_predicate-abi.json  contract_message_script-abi.json
docs/: deploy_docs.md  designDocs.md  design_docs.md
frc20-abi/: Forc.toml
frc20-abi/src/: frc20_abi.sw
frc20_abi/: Forc.toml
fuel_dev_env_stack/: README.md
fuel_dev_env_stack/scripts/: deployer.sh  fuel_core.sh
fungible_token/: Cargo.toml  Forc.toml
fungible_token/src/: abi.sw  errors.sw  events.sw  main.sw
fungible_token/tests/: harness.rs
fungible_token_abi/: Forc.toml
fungible_token_abi/src/: lib.sw
gateway_abi/: Forc.toml
gateway_abi/src/: lib.sw  main.sw
gateway_caller_script/: Forc.toml
gateway_caller_script/src/: main.sw
gateway_caller_script/tests/: harness.rs
integration_tests/: README.md  package-lock.json  package.json
integration_tests/fuel-v2-contracts-typechain/: FuelMessageInbox.d.ts  (+1 more)
layer_2_gateway/: Cargo.toml  Forc.toml
message_to_fungible_token_predicate/: Forc.toml
message_to_token_predicate/: Forc.toml
token_abi/: Forc.toml
token_caller_script/: Forc.toml
token_gate/: Cargo.toml  Forc.toml
(+55 files in other folders)
