[project]
name = "script"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = "0.15"
fuel-core = { version = "0.8", default-features = false }
fuel-crypto = "0.5"

fuel-gql-client = { version = "0.8", default-features = false }
fuels-contract = { version = "0.15.1" }
fuels-signers = { version = "0.15.1" }
fuels-abigen-macro = "0.15"
tokio = { version = "1.12", features = ["rt", "macros"] }


[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
