[project]
name = "script"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]

# With this, test fails and output suggests fuel-core is at 0.8 (despite 0.9 specified below)
fuels = "0.16" 

# With this, test passes (also need to uncomment line 28 in harness.rs)
# fuels = { version = "0.16", features = ["fuel-core-lib"] }


fuel-core = { version = "0.9", default-features = false }
fuel-crypto = "0.5"

fuel-gql-client = { version = "0.9", default-features = false }
fuels-contract = { version = "0.16" }
fuels-signers = { version = "0.16" }
fuels-abigen-macro = "0.16"
tokio = { version = "1.12", features = ["rt", "macros"] }


[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
